[package]
name = "rcm"
version = "0.6.0"
edition = "2021"
authors = ["Dr. Q and Company"]
license = "MIT"
description = "RCM – Polyglot Package Manager for Rust, Node.js, PHP, and System Packages"
homepage = "https://github.com/drq-company/rcm"
repository = "https://github.com/drq-company/rcm"
readme = "README.md"
keywords = ["package-manager", "cargo", "npm", "composer", "polyglot"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "rcm_cli"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rcm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
sha2 = "0.10"
semver = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tempfile = "3.0"
walkdir = "2.0"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
log = "0.4"
env_logger = "0.10"
which = "4.0"

[dev-dependencies]
tempdir = "0.3"
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"

[features]
default = ["let", "npm", "ppm", "system"]
let = []
npm = []
ppm = []
system = []
experimental = ["let", "npm", "ppm", "system"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "package_resolution"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
